capútulo 4 listo en el contenido

--- a/clases/unidad2/4_chapter.ipynb
+++ b/clases/unidad2/4_chapter.ipynb
@@ -1184,27 +1184,625 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd08fa0c",
+   "id": "7456f823",
+   "metadata": {},
+   "source": [
+    "## Diseño ampliado de clase\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9e385af",
    "metadata": {},
    "source": [
     "\n",
-    "## 14. Continuidad del curso\n",
+    "**Tema:** Expresiones condicionales en Python con operadores lógicos `and` y `or`\n",
+    "**Programa:** Matemáticas puras\n",
+    "**Institución:** Universidad de Antioquia\n",
+    "**Enfoque:** Matemática formal + programación + ciencia de datos (Machine Learning / Deep Learning)\n",
+    "**Duración:** 3 horas\n",
     "\n",
-    "Puedo prepararte inmediatamente:\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f181fa2d",
+   "metadata": {},
+   "source": [
     "\n",
-    "1. Notebook en Colab con la clase completa.\n",
-    "2. Lista de 40 ejercicios matemáticos con condicionales.\n",
-    "3. Clase siguiente: estructuras iterativas aplicadas a datos.\n",
-    "4. Clase integrada: condicionales + modelos de clasificación en Python.\n"
+    "# 1. Propósito de la ampliación\n",
+    "\n",
+    "Fortalecer la comprensión de los condicionales incorporando **operadores lógicos AND y OR** como herramientas para:\n",
+    "\n",
+    "* construir proposiciones compuestas\n",
+    "* modelar reglas matemáticas\n",
+    "* diseñar criterios de clasificación en ciencia de datos\n",
+    "* programar decisiones complejas\n",
+    "\n",
+    "Idea clave:\n",
+    "\n",
+    "> En ciencia de datos, las decisiones rara vez dependen de una sola condición; normalmente dependen de varias condiciones combinadas.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf551e57",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 2. Objetivos de aprendizaje específicos\n",
+    "\n",
+    "El estudiante será capaz de:\n",
+    "\n",
+    "1. Construir proposiciones compuestas usando `and` y `or`.\n",
+    "2. Interpretar estas expresiones desde la lógica matemática.\n",
+    "3. Diseñar reglas de decisión basadas en múltiples variables.\n",
+    "4. Implementar condiciones compuestas en problemas matemáticos y de datos.\n",
+    "5. Comprender su rol en modelos de clasificación y aprendizaje automático.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c704b40",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 3. Fundamento conceptual\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c531a2b9",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 3.1 Operador `and` (conjunción lógica)\n",
+    "\n",
+    "En Python:\n",
+    "\n",
+    "```python\n",
+    "condición1 and condición2\n",
+    "```\n",
+    "\n",
+    "Es verdadera si ambas son verdaderas.\n",
+    "\n",
+    "Relación matemática:\n",
+    "\n",
+    "* conjunción lógica\n",
+    "* intersección de conjuntos\n",
+    "* cumplimiento simultáneo de predicados\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a280ba73",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Ejemplo:\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7456f823",
+   "id": "71c6418d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 8\n",
+    "\n",
+    "if x > 0 and x % 2 == 0:\n",
+    "    print(\"positivo y par\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5a8099d",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 3.2 Operador `or` (disyunción lógica)\n",
+    "\n",
+    "En Python:\n",
+    "\n",
+    "```python\n",
+    "condición1 or condición2\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7aca61a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Es verdadera si al menos una condición es verdadera.\n",
+    "\n",
+    "Relación matemática:\n",
+    "\n",
+    "* disyunción lógica\n",
+    "* unión de conjuntos\n",
+    "\n",
+    "Ejemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5864515b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "negativo o par\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = -3\n",
+    "\n",
+    "if x < 0 or x % 2 == 0:\n",
+    "    print(\"negativo o par\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e63c516",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 4. Aplicación en ciencia de datos\n",
+    "\n",
+    "Los operadores `and` y `or` aparecen en:\n",
+    "\n",
+    "* clasificación de clientes\n",
+    "* detección de anomalías\n",
+    "* segmentación de población\n",
+    "* reglas de negocio\n",
+    "* modelos de decisión\n",
+    "\n",
+    "Ejemplo:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2c9b11b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cliente potencial premium\n"
+     ]
+    }
+   ],
+   "source": [
+    "edad = 35\n",
+    "ingresos = 5_000_000\n",
+    "\n",
+    "if edad > 30 and ingresos > 3_000_000:\n",
+    "    print(\"cliente potencial premium\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6695b2b6",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 5. Secuencia didáctica con actividades\n",
+    "\n",
+    "## 5.1 Actividad guiada inicial (20 min)\n",
+    "\n",
+    "Objetivo:\n",
+    "Comprender diferencia entre `and` y `or`.\n",
+    "\n",
+    "Se entregan tres condiciones:\n",
+    "\n",
+    "* x > 0\n",
+    "* x < 10\n",
+    "* x es par\n",
+    "\n",
+    "Los estudiantes predicen resultados antes de programar.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b75f5cc",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 5.2 Actividad matemática (30 min)\n",
+    "\n",
+    "Problemas:\n",
+    "\n",
+    "1. Determinar si un número pertenece al intervalo $(a, b)$.\n",
+    "2. Determinar si pertenece a dos intervalos simultáneamente.\n",
+    "3. Verificar desigualdades compuestas.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b147859",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Ejemplo:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d1b8818",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 4\n",
+    "\n",
+    "if x > 0 and x < 10:\n",
+    "    print(\"pertenece al intervalo\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eee9f76",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Discusión:\n",
+    "\n",
+    "* intervalos abiertos y cerrados\n",
+    "* condiciones simultáneas\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d3f5b38",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 5.3 Actividad aplicada a ciencia de datos (40 min)\n",
+    "\n",
+    "Simulación de clasificación.\n",
+    "\n",
+    "Variables:\n",
+    "\n",
+    "* edad\n",
+    "* ingresos\n",
+    "* score de crédito\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fb89305",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Reglas:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43a83596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if score > 0.7 and ingresos > 3_000_000:\n",
+    "    print(\"aprobado\")\n",
+    "\n",
+    "elif score > 0.7 or ingresos > 5_000_000:\n",
+    "    print(\"evaluación manual\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"rechazado\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d7a2f5f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Discusión:\n",
+    "\n",
+    "* decisiones multicriterio\n",
+    "* reglas de negocio\n",
+    "* lógica aplicada\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "348a9915",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 5.4 Actividad de modelación matemática (40 min)\n",
+    "\n",
+    "Diseñar un programa que determine:\n",
+    "\n",
+    "* si un número pertenece a:\n",
+    "\n",
+    "  * ℕ\n",
+    "  * ℤ\n",
+    "  * intervalo dado\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dd84f79",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Ejemplo:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0297be35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = float(input())\n",
+    "\n",
+    "if x >= 0 and x == int(x):\n",
+    "    print(\"natural\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ef27ef4",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 5.5 Actividad tipo laboratorio (Machine Learning conceptual) (30 min)\n",
+    "\n",
+    "Simular frontera de decisión:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45ad6fdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = float(input(\"variable 1: \"))\n",
+    "y = float(input(\"variable 2: \"))\n",
+    "\n",
+    "if x > 0.5 and y > 0.5:\n",
+    "    print(\"Clase A\")\n",
+    "else:\n",
+    "    print(\"Clase B\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8cf6426",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\n",
+    "Interpretación:\n",
+    "\n",
+    "* región del plano\n",
+    "* clasificación binaria\n",
+    "* base conceptual de redes neuronales\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f153f70f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 6. Ejercicios de clase para fijación\n",
+    "\n",
+    "### Nivel 1 — lógica básica\n",
+    "\n",
+    "1. Determinar si un número es positivo y par.\n",
+    "2. Determinar si es negativo o múltiplo de 3.\n",
+    "3. Verificar si pertenece al intervalo [-1,1].\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06a8ed66",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Nivel 2 — matemática aplicada\n",
+    "\n",
+    "4. Verificar si un punto (x,y) está dentro de un rectángulo.\n",
+    "5. Determinar si un número satisface dos desigualdades simultáneas.\n",
+    "6. Clasificar un valor según dos criterios.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54a848e9",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Nivel 3 — ciencia de datos\n",
+    "\n",
+    "7. Detectar anomalías con dos umbrales.\n",
+    "8. Clasificar clientes por edad e ingresos.\n",
+    "9. Decidir si un dato es outlier.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2d87311",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 7. Tareas para fijación (trabajo independiente)\n",
+    "\n",
+    "## Tarea 1 — matemática formal\n",
+    "\n",
+    "Construir un programa que:\n",
+    "\n",
+    "* reciba un número\n",
+    "* determine si pertenece a:\n",
+    "\n",
+    "  * (0,1)\n",
+    "  * [-5,5]\n",
+    "  * ℕ\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be46f0fd",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Tarea 2 — clasificación\n",
+    "\n",
+    "Diseñar un sistema que:\n",
+    "\n",
+    "* reciba edad e ingresos\n",
+    "* clasifique:\n",
+    "\n",
+    "| condición               | categoría        |\n",
+    "| ----------------------- | ---------------- |\n",
+    "| edad<25 AND ingresos<2M | joven vulnerable |\n",
+    "| edad>25 AND ingresos>4M | estable          |\n",
+    "| edad>50 OR ingresos>6M  | alto perfil      |\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca04f7b3",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Tarea 3 — anomalías\n",
+    "\n",
+    "Recibir valores y detectar si:\n",
+    "\n",
+    "* valor > media + desviación\n",
+    "* valor < media − desviación\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bdf5590",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Tarea 4 — modelación\n",
+    "\n",
+    "Simular un clasificador:\n",
+    "\n",
+    "* dos variables\n",
+    "* tres clases\n",
+    "* reglas con AND/OR\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6151c3d",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 8. Evaluación formativa\n",
+    "\n",
+    "Criterios:\n",
+    "\n",
+    "* uso correcto de `and`\n",
+    "* uso correcto de `or`\n",
+    "* coherencia lógica\n",
+    "* interpretación matemática\n",
+    "* aplicación en datos\n",
+    "\n",
+    "Producto evaluable:\n",
+    "\n",
+    "Programa que:\n",
+    "\n",
+    "1. reciba variables\n",
+    "2. combine condiciones\n",
+    "3. clasifique datos\n",
+    "4. interprete resultados\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41f35b7a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 9. Cierre conceptual\n",
+    "\n",
+    "Reflexión:\n",
+    "\n",
+    "* ¿Qué diferencia hay entre conjunción matemática y condicional computacional?\n",
+    "* ¿Cómo se representan regiones del plano con AND/OR?\n",
+    "* ¿Por qué estos operadores son fundamentales en Machine Learning?\n",
+    "\n",
+    "Idea final:\n",
+    "\n",
+    "> Los operadores AND y OR permiten construir fronteras de decisión, que son la base de los algoritmos de clasificación en ciencia de datos y aprendizaje automático.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a76e1b1e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 10. Continuidad pedagógica\n",
+    "\n",
+    "Siguientes clases sugeridas:\n",
+    "\n",
+    "1. Iteraciones (`for`, `while`) aplicadas a datos.\n",
+    "2. Condicionales dentro de modelos de clasificación.\n",
+    "3. Árboles de decisión como extensión natural de los `if`.\n",
+    "4. Implementación de un clasificador real en Python.\n",
+    "\n",
+    "---\n"
+   ]
   },
   {
    "cell_type": "markdown",
