espacio para el video de apoyo a la lectura interactiva y experimental

--- a/clases/unidad2/4_chapter.ipynb
+++ b/clases/unidad2/4_chapter.ipynb
@@ -451,6 +451,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1def955c",
+   "metadata": {},
+   "source": [
+    "[Video de apoyo al aprendizaje para el caítulo 4]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c9c73e7",
    "metadata": {},
    "source": [
@@ -465,12 +473,12 @@
    "source": [
     "## Diseño de clase\n",
     "\n",
-    "**Tema:** Expresiones condicionales en Python orientadas a ciencia de datos\n",
-    "**Programa:** Matemáticas puras\n",
-    "**Institución:** Universidad de Antioquia\n",
-    "**Enfoque:** Pensamiento matemático + programación + ciencia de datos (Machine Learning y Deep Learning)\n",
-    "**Duración:** 3 horas\n",
-    "**Nivel:** Curso base de programación para matemáticos\n",
+    "* **Tema:** Expresiones condicionales en Python orientadas a ciencia de datos  \n",
+    "* **Programa:** Matemáticas puras  \n",
+    "* **Institución:** Universidad de Antioquia  \n",
+    "* **Enfoque:** Pensamiento matemático + programación + ciencia de datos (Machine Learning y Deep Learning)  \n",
+    "* **Duración:** 3 horas  \n",
+    "* **Nivel:** Curso base de programación para matemáticos  \n",
     "\n",
     "---\n"
    ]
@@ -481,7 +489,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 1. Introducción (siguiendo la estructura del capítulo)\n"
+    "# 1. Introducción\n"
    ]
   },
   {
@@ -490,7 +498,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "En la sesión anterior los estudiantes trabajaron con operadores, tipos de datos y estructuras básicas en Python.\n"
+    "En las clases anteriores hemos trabajado:  \n",
+    "\n",
+    "* con operadores, \n",
+    "* tipos de datos y \n",
+    "* estructuras básicas en Python.\n"
    ]
   },
   {
@@ -629,19 +641,15 @@
     "* decidir si una imagen contiene un objeto\n",
     "* determinar si un valor es anomalía\n",
     "\n",
-    "Traducción básica:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bed31669",
-   "metadata": {},
-   "source": [
+    "Traducción básica:  \n",
+    "\n",
+    "```python\n",
     "probabilidad = 0.82\n",
     "\n",
     "if probabilidad > 0.5:\n",
-    "    print(\"Clase positiva\")\n"
+    "    print(\"Clase positiva\")\n",
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -652,7 +660,7 @@
     "\n",
     "Discusión:\n",
     "\n",
-    "* umbral\n",
+    "* umbral (un punto en la recta real, una recta en el plano cartesiano, un plano en el espacio). \n",
     "* decisión computacional\n",
     "* relación con clasificación binaria\n",
     "\n",
@@ -1196,11 +1204,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "**Tema:** Expresiones condicionales en Python con operadores lógicos `and` y `or`\n",
-    "**Programa:** Matemáticas puras\n",
-    "**Institución:** Universidad de Antioquia\n",
-    "**Enfoque:** Matemática formal + programación + ciencia de datos (Machine Learning / Deep Learning)\n",
-    "**Duración:** 3 horas\n",
+    "* **Tema:** Expresiones condicionales en Python con operadores lógicos `and` y `or`\n",
+    "* **Programa:** Matemáticas puras\n",
+    "* **Institución:** Universidad de Antioquia\n",
+    "* **Enfoque:** Matemática formal + programación + ciencia de datos (Machine Learning / Deep Learning)\n",
+    "* **Duración:** 30 minutos\n",
     "\n",
     "---\n"
    ]
@@ -1493,7 +1501,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Reglas:\n",
+    "## Reglas:\n",
     "\n"
    ]
   },
@@ -2214,10 +2222,31 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Cómo integrar estos referentes con tu postura\n",
+    "# Cómo integrar estos referentes con tu postura\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55c4b0d2",
+   "metadata": {},
+   "source": [
     "\n",
-    "1. **Papert, Wing y Piaget-Vygotsky** sustentan que el pensamiento computacional debe enseñarse desde todos los niveles.\n",
-    "2. **Schoenfeld, Duval y Godino** muestran que estas herramientas enriquecen la comprensión matemática sin sustituir los enfoques tradicionales.\n",
+    "1. **Papert, Wing y Piaget-Vygotsky** sustentan que el pensamiento computacional debe enseñarse desde todos los niveles.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63e90142",
+   "metadata": {},
+   "source": [
+    "2. **Schoenfeld, Duval y Godino** muestran que estas herramientas enriquecen la comprensión matemática sin sustituir los enfoques tradicionales.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2349e703",
+   "metadata": {},
+   "source": [
     "3. **NCTM, ACM y IEEE** legitiman que las matemáticas deben enseñarse con herramientas tecnológicas alineadas con el mundo laboral y científico.\n",
     "\n",
     "---\n"
@@ -2396,7 +2425,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "* Duval, R. (1993). *Registres de représentations sémiotiques et fonctionnement cognitif de la pensée*. Annales de didactique et de sciences cognitives, 5, 37–65.\n",
+    "* Duval, R. (1993). *Registres de représentations sémiotiques et fonctionnement cognitif de la pensée*. Annales de didactique et de sciences cognitives, 5, 37–65.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91fa429f",
+   "metadata": {},
+   "source": [
     "\n",
     "* Duval, R. (2006). A cognitive analysis of problems of comprehension in a learning of mathematics. *Educational Studies in Mathematics, 61*(1-2), 103–131. [https://doi.org/10.1007/s10649-006-0400-z](https://doi.org/10.1007/s10649-006-0400-z)\n"
    ]
@@ -2407,11 +2443,32 @@
    "metadata": {},
    "source": [
     "\n",
-    "* Godino, J. D., Batanero, C., & Font, V. (2007). The onto-semiotic approach to research in mathematics education. *ZDM Mathematics Education, 39*(1–2), 127–135. [https://doi.org/10.1007/s11858-006-0004-1](https://doi.org/10.1007/s11858-006-0004-1)\n",
+    "* Godino, J. D., Batanero, C., & Font, V. (2007). The onto-semiotic approach to research in mathematics education. *ZDM Mathematics Education, 39*(1–2), 127–135. [https://doi.org/10.1007/s11858-006-0004-1](https://doi.org/10.1007/s11858-006-0004-1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4820bfc7",
+   "metadata": {},
+   "source": [
     "\n",
-    "* Godino, J. D. (2017). El enfoque ontosemiótico de la cognición e instrucción matemática. *Revista Latinoamericana de Investigación en Matemática Educativa, 20*(1), 5–30. [https://doi.org/10.12802/relime.17.2011](https://doi.org/10.12802/relime.17.2011)\n",
+    "* Godino, J. D. (2017). El enfoque ontosemiótico de la cognición e instrucción matemática. *Revista Latinoamericana de Investigación en Matemática Educativa, 20*(1), 5–30. [https://doi.org/10.12802/relime.17.2011](https://doi.org/10.12802/relime.17.2011)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7292f746",
+   "metadata": {},
+   "source": [
     "\n",
-    "* National Council of Teachers of Mathematics. (2000). *Principles and Standards for School Mathematics*. Reston, VA: NCTM.\n",
+    "* National Council of Teachers of Mathematics. (2000). *Principles and Standards for School Mathematics*. Reston, VA: NCTM.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7d4df94",
+   "metadata": {},
+   "source": [
     "\n",
     "* National Council of Teachers of Mathematics. (2014). *Principles to Actions: Ensuring Mathematical Success for All*. Reston, VA: NCTM.\n"
    ]
