--- a/clases/0_formato_clases_fundamentos_programacion/4_formato_clase_funda_programacion.ipynb
+++ b/clases/0_formato_clases_fundamentos_programacion/4_formato_clase_funda_programacion.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "Un reconocimiento a mis estudiantes que han construido conmigo este saber pedagógico:\n",
     "\n",
-    "<img src = 'https://github.com/marco-canas/algebra_y_trigonometria/blob/main/7_images/5_clase_3_2025-08-12_hora_11_04.jpg?raw=true'> \n",
+    "<img src = 'https://github.com/marco-canas/algebra_y_trigonometria/blob/main/7_images/5_clase_3_2025-08-12_hora_11_04.jpg?raw=true' width = 300> \n",
     "\n"
    ]
   },
@@ -288,7 +288,7 @@
    "id": "841a985c-bd9b-4dd3-8e4c-893983980af2",
    "metadata": {},
    "source": [
-    "# Desarrollo del pensamiento computacional con Lenguajes Python y con archivos Markdown orientado a la formación en ciencia de datos \n",
+    "# Desarrollo del pensamiento computacional con Lenguajes Python, Markdown y Latex orientado a la formación en ciencia de datos \n",
     "\n"
    ]
   },
@@ -407,7 +407,8 @@
     "* Miércoles 9 a 11 M:  \n",
     "* Jueves 8 a 12 M: Funamentos de Programación\n",
     "* Jueves 2 a 6 PM:    \n",
-    "* Viernes 8 - 12 M: Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.    \n",
+    "* Viernes 8 - 12 M: Asesorías y espacio para retroalimentación y apoyo al trabajo independiente. \n",
+    "* Viernes de 2 PM a 6 PM: Asesoría a Janis Arima.    \n",
     "* Sábados 8-12: PIVU Puerto Libertador.  "
    ]
   },
